fix fonts on mobile devices

--- a/css/style.scss
+++ b/css/style.scss
@@ -3814,6 +3814,9 @@ select{
 	}
 }
 @media screen and (max-width: 480px){
+	body{
+		font-family: 'MazaHel';
+	}
 	.subCategory{
 		overflow-x: scroll;
 		ul{
